# calculators

./: README.md  pyproject.toml
src/calculators/: calculator.py  calculator_2.py  calculator_3.py  calculator_4.py
src/calculators/test_calculators/: test_calculator.py
src/drivers/: numpy_handler.py
src/drivers/interfaces/: driver_handler_interface.py
src/errors/: error_controller.py  http_bad_request.py  http_unprocessable_entity.py
src/main/factories/: calculator1_factory.py  calculator2_factory.py  calculator3_factory.py  calculator4_factory.py
src/main/routes/: calculators.py
src/main/server/: server.py
