[tool.poetry]
name = "calculadora"
version = "0.1.0"
description = ""
authors = ["Vinicius <vinicius.avelino@mercadolivre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pytest = "^8.3.2"
numpy = "^2.1.1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
